Updated name bug in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yousuf Khandakar - Portfolio</title>
+    <title>Yousuf Khandaker - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -12,7 +12,7 @@
     <header>
         <div class="navbar">
             <div class="navbar-brand">
-                <h1>Yousuf Khandakar</h1>
+                <h1>Yousuf Khandaker</h1>
             </div>
             <button class="navbar-toggler" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
